--- a/week1/server-one/package.json
+++ b/week1/server-one/package.json
@@ -4,7 +4,8 @@
   "description": "server-one",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Dung Tran",
   "license": "ISC",
