--- a/week1/server-two/package.json
+++ b/week1/server-two/package.json
@@ -10,6 +10,7 @@
   "author": "Dung Tran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
   }
 }
