--- a/week1/server-two/package.json
+++ b/week1/server-two/package.json
@@ -7,6 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "keywords": [
+    "node.js",
+    "express",
+    "pug"
+  ],
   "author": "Dung Tran",
   "license": "ISC",
   "dependencies": {
