--- a/week2/package.json
+++ b/week2/package.json
@@ -1,14 +1,16 @@
 {
   "name": "week2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Choose a branch and download as zip.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
-  "author": "",
+  "author": "Dung Tran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14"
   }
 }
