--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ dist
 
 # OS
 .DS_Store
+
+# ignore the content of uploads folder
+*/uploads/*
+# except one (empty) file to have the folder in version control
+!*/uploads/.gitkeep
