--- a/.gitignore
+++ b/.gitignore
@@ -108,5 +108,7 @@ dist
 
 # ignore the content of uploads folder
 */uploads/*
+*/thumbnails/*
 # except one (empty) file to have the folder in version control
 !*/uploads/.gitkeep
+!*/thumbnails/.gitkeep
