--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,8 @@ dist
 # except one (empty) file to have the folder in version control
 !*/uploads/.gitkeep
 !*/thumbnails/.gitkeep
+
+#ignore tls certificate and private key
+week2/certrequest.csr
+week2/ssl-cert.pem
+week2/ssl-key.pem
